# odd-demonstration

./: .bazelignore  .bazelrc  .dockerignore  .gitattributes  .gitignore  .golangci.yml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  README_beginner.md  WORKSPACE  commitlint.config.cjs  coverage-config.json  deployment-plan.md  docker-compose.demo.yml  docker-compose.integration.yml  essay.md  essay_part1.md  go.work  install.ps1  install.sh  logo.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
.husky/: commit-msg  pre-commit
architecture/: diagram3.md  observability.md  runtime.md  system-diagram.md
archive/: initial-prompt.v1.md
audit/: complete-session-audit.md  current-ci-error.md  implementation_plan.md  session-2025-12-26-visual-test-correction-plan.md  session-2025-12-26-visual-tests.md  session-continuation.md  session-summary.md  task.md  walkthrough.md
contracts/: README.md  VERSIONS.md  blueprint.md  contract-rules.md  ui-registry.json  validation-results.json
contracts/examples/: event-example.json
contracts/fixtures/golden/: event-envelope-valid.json  job-all-fields.json  job-valid.json  job-with-extra-fields.json
contracts/fixtures/negative/: event-envelope-missing-eventId.json  event-envelope-missing-producer.json  event-envelope-producer-incomplete.json  event-envelope-wrong-type.json  job-invalid-status.json  job-missing-id.json  job-wrong-status-type.json
contracts/schemas/: BUILD.bazel  event-envelope.json  job-accepted.json  job.json
docs/: FEATURES.md  INVARIANTS.md  SECRET_MANAGEMENT.md  SUPPORT_MATRIX.md  TESTING.md  VERIFYING_RELEASES.md  app.js  index.html  package-lock.json  package.json  playwright.config.js  styles.css
docs/agents/: FEATURES.md  INVARIANTS.md  RELEASE_CHECKLIST.md  SECRET_MANAGEMENT.md  SUPPORT_MATRIX.md  TESTING.md  VERIFYING_RELEASES.md
docs/experiment/: index.html
docs/tests/: docs-viewer.spec.js
experiment/: app.js  experiment.md  styles.css  test.html
experiment/control-groups/dapr/: claude-opus-assessment-2025-12-27.md  claude-sonnet-assessment-2025-12-27.md  gpt-oss-120b-assessment-2025-12-27.md  gpt5.2-browser-assessment-2025-12-27.md
experiment/control-groups/google-microservices-demo/: gm-claude-opus-assessment-2025-12-27.md  gm-claude-sonnet-assessment-2025-12-27.md  gm-gemini-high-assessment-2025-12-27.md  supergrok-browser-assessment-2025-12-27.md
experiment/experiment-group/: gemini-high-assessment-2025-12-27.md  gpt-codex-assessment-2025-12-27.md  oed-claude-opus-assessment-2025-12-27.md  oed-claude-sonnet-assessment-2025-12-27.md  oed-gemini-flash-assessment-2025-12-27.md  oed-gpt-oss-120b-assessment-2025-12-27.md  oed-gpt5.2-browser-assessment-2025-12-27.md  supergrok-browser-assessment-2025-12-27.md
infra/grafana/dashboards/: main-dashboard.json
infra/k8s/: alertmanager-config.yaml  alertmanager.yaml  gateway.yaml  grafana-dashboards.yaml  grafana-datasource.yaml  grafana.yaml  infra-ingress.yaml  metrics-engine.yaml  mongodb.yaml  pgadmin.yaml  postgres.yaml  processor.yaml  prometheus-rules.yaml  prometheus.yaml  rabbitmq.yaml  read-model.yaml  redis.yaml  redisinsight.yaml  web-pty-ws.yaml  web-ui-http.yaml  web-ui.yaml
infra/prometheus/: prometheus.yml
repro/: BUILD.bazel  repro-requirements.txt  repro_stall.py
scripts/: audit-naming-consistency.ps1  audit-workflows.ps1  bump-version.ps1  check-coverage.py  check-readme-structure.py  check-schema-compat.py  check-service-versions.py  check-timeout-sync.py  integration-gate.ps1  integration-harness.ps1  pre-commit  pre-commit.ps1  run-all-tests.ps1  setup-cluster.ps1  smoke-test.ps1  start-all.ps1  sync-coverage-docs.py  test-contracts-sanity.py  test-contracts.py  update-bazel-lock.sh  validate-ci.ps1  validate-compose-k8s-parity.ps1  validate-contracts.ps1  validate-dockerfile-context.py  validate-json.mjs  verify-artifact-names.ps1  verify-version-sync.ps1
src/interfaces/tui/: Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  rustfmt.toml  test_output.txt
src/interfaces/tui/src/: cluster.rs  config.rs  doctor.rs  error.rs  install.rs  lib.rs  main.rs  types.rs
src/interfaces/web/: .dockerignore  Dockerfile  README.md  index.html  launcher.html  nginx.conf  nginx.integration.conf  package-lock.json  package.json  styles.css  terminal.js
src/services/gateway/: .dependency-cruiser.cjs  BUILD.bazel  Dockerfile  README.md  eslint.config.js  index.js  index.ts  package-lock.json  package.json  run_tests.sh  tsconfig.json  vitest.config.ts
src/services/gateway/__tests__/: app.test.ts  builders.test.ts  config.test.ts  golden.test.ts  index.test.js  index.test.ts  smoke-import.test.ts  validators.test.ts  web-smoke.test.js
src/services/gateway/lib/: app.ts  builders.ts  config.ts  index.ts  types.ts  validators.ts
src/services/metrics-engine/: BUILD.bazel  Dockerfile  README.md  coverage  go.mod  go.sum  main.go  metrics_engine_test.go
src/services/metrics-engine/validator/: BUILD.bazel  validator.go  validator_test.go
src/services/processor/: BUILD.bazel  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  requirements_lock.txt  schema_validator.py
src/services/processor/schemas/: event-envelope.json
src/services/processor/tests/: __init__.py  conftest.py  test_main.py  test_schema_validator.py
src/services/read-model/: BUILD.bazel  Dockerfile  README.md  coverage  go.mod  go.sum  main.go  main_test.go  read_model_test.go
src/services/web-pty-server/: Cargo.toml  Dockerfile  README.md
src/services/web-pty-server/src/: auth.rs  config.rs  lib.rs  main.rs  protocol.rs  pty.rs  pty_task.rs  ring.rs  session.rs
tests/: DETERMINISM.md  web-smoke.test.js  web-smoke.test.ts
tests/visual/: README.md  package-lock.json  package.json  playwright.config.ts  pty-state.spec.ts  retry-on-disconnect.spec.ts  terminal.spec.ts
tools/bazel/: SHA256SUMS
(+24 files in other folders)
