module(
    name = "distributed_task_observatory",
    version = "0.1.0",
)

# JavaScript/Node.js
bazel_dep(name = "aspect_rules_js", version = "1.42.3")
bazel_dep(name = "rules_nodejs", version = "6.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")

# Python
bazel_dep(name = "rules_python", version = "0.36.0")

# Container images
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "rules_pkg", version = "0.10.1")

# npm configuration
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# Python pip
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//src/services/processor:requirements_lock.txt",
)
use_repo(pip, "pip")

# OCI base images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_node",
    digest = "sha256:4f9fc149af97d9ef355f3e4663e800a74704095a56396e983ca1e72e81110098",
    image = "gcr.io/distroless/nodejs20-debian12",
)
use_repo(oci, "distroless_node")

oci.pull(
    name = "distroless_python",
    digest = "sha256:79493f0b24bf4c96576856a9359e190e3cd16e7f8f94af505f1345f34045f2be",
    image = "gcr.io/distroless/python3-debian12",
)
use_repo(oci, "distroless_python")

