module(
    name = "distributed_task_observatory",
    version = "0.1.0",
)

# JavaScript/Node.js
bazel_dep(name = "aspect_rules_js", version = "2.8.3")
bazel_dep(name = "rules_nodejs", version = "6.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")

# Go
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

# Rust
bazel_dep(name = "rules_rust", version = "0.42.1")

# Python
bazel_dep(name = "rules_python", version = "0.36.0")

# Container images
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "rules_pkg", version = "0.10.1")

# npm configuration
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# Go configuration
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//src/services/metrics-engine:go.mod")
go_deps.from_file(go_mod = "//src/services/read-model:go.mod")
use_repo(go_deps, "com_github_redis_go_redis_v9", "com_github_lib_pq", "org_mongodb_go_mongo_driver", "com_github_rabbitmq_amqp091_go")

# Rust configuration
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Python pip
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//src/services/processor:requirements_lock.txt",
)
use_repo(pip, "pip")

# OCI base images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_node",
    image = "gcr.io/distroless/nodejs20-debian12",
    tag = "latest",
)
use_repo(oci, "distroless_node")

oci.pull(
    name = "distroless_python",
    image = "gcr.io/distroless/python3-debian12",
    tag = "latest",
)
use_repo(oci, "distroless_python")


