module(
    name = "distributed_task_observatory",
    version = "0.1.0",
)

# JavaScript/Node.js
bazel_dep(name = "aspect_rules_js", version = "2.8.3")
bazel_dep(name = "rules_nodejs", version = "6.3.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")

# Go
bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "gazelle", version = "0.37.0")

# Rust
bazel_dep(name = "rules_rust", version = "0.42.1")

# Python
bazel_dep(name = "rules_python", version = "0.36.0")

# Container images
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "rules_pkg", version = "0.10.1")

# npm configuration
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# Go configuration
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(go_deps, "com_github_redis_go_redis_v9", "com_github_lib_pq", "org_mongodb_go_mongo_driver", "com_github_rabbitmq_amqp091_go")

# Rust configuration
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.75.0"],  # Pin version to avoid slow/hanging toolchain resolution
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Python pip (primary - will be split into light/heavy later)
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//src/services/processor:requirements_lock.txt",
)
use_repo(pip, "pip")

# NOTE: pip_repro_stall repo was removed from here because pip.parse extensions
# are evaluated during module loading regardless of target dependencies.
# To run the stall diagnostic, use the separate repro CI job.

# OCI base images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_node",
    image = "gcr.io/distroless/nodejs20-debian12",
    digest = "sha256:7fff8fb4a6463da2765532290c958f7e6fc01d54d7539f0d2bda1e93c7636d7c",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_node")

oci.pull(
    name = "distroless_python",
    image = "gcr.io/distroless/python3-debian12",
    digest = "sha256:8ce6bba3f793ba7d834467dfe18983c42f9b223604970273e9e3a22b1891fc27",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_python")


