load("@rules_python//python:defs.bzl", "py_binary")

# NOTE: The actual stall diagnostic is run via a separate CI job (stall-repro)
# that temporarily replaces MODULE.bazel. This target exists only as a placeholder
# and documentation marker.

py_binary(
    name = "repro_stall",
    srcs = ["repro_stall.py"],
    tags = ["manual"],  # Never build in //...
    # deps intentionally empty - see stall-repro CI job for actual diagnostic
)
