[package]
name = "odd-dashboard"
version = "3.4.2"
edition = "2021"
description = "Terminal dashboard for Distributed Task Observatory"
repository = "https://github.com/oddessentials/odd-demonstration"
license = "MIT"
readme = "README.md"
keywords = ["kubernetes", "observability", "dashboard", "tui"]
categories = ["command-line-utilities", "development-tools"]
# Include Cargo.lock so `cargo test --locked` works from packaged tarball
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "README.md", "VERSION", "build.rs"]

[lib]
name = "odd_dashboard"
path = "src/lib.rs"

[[bin]]
name = "odd-dashboard"
path = "src/main.rs"

[dependencies]
ratatui = "=0.24.0"
crossterm = "=0.29.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
open = "5"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
arboard = "=2.1"  # Pinned: v3 pulls moxcms requiring edition2024 (not stable in Cargo 1.83)

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
