load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

js_binary(
    name = "gateway_bin",
    data = [
        "index.js",
        "//contracts/schemas",
        "//:node_modules/express",
        "//:node_modules/amqplib",
        "//:node_modules/ajv",
        "//:node_modules/ajv-formats",
        "//:node_modules/uuid",
        "//:node_modules/body-parser",
        "//:node_modules/prom-client",
    ],
    entry_point = "index.js",
)


# Packaging for OCI
pkg_tar(
    name = "app_tar",
    srcs = [
        "index.js",
        "package.json",
    ],
    package_dir = "/app",
)

# We also need the contracts and node_modules in the image
# For simplicity in this demo, we'll just bundle what's needed
oci_image(
    name = "image",
    base = "@distroless_node_linux_amd64",
    entrypoint = ["/nodejs/bin/node", "/app/src/services/gateway/index.js"],
    tars = [":app_tar"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["gateway:latest"],
    tags = ["manual"],  # Excluded from //... builds - Docker format requires additional configuration
)

# Test target - runs vitest via npm test
# Tagged manual: requires npm install outside Bazel sandbox
# TODO: Use js_test with proper rules_js setup for hermetic tests
sh_test(
    name = "gateway_test",
    srcs = ["run_tests.sh"],
    data = [
        "package.json",
        "__tests__/index.test.js",
        "VERSION",
    ],
    tags = ["manual"],  # Excluded - needs npm install outside Bazel
)
