load("@rules_go//go:def.bzl", "go_binary", "go_library")

# Export go.mod and go.sum for gazelle's go_deps extension
exports_files(["go.mod", "go.sum"])

go_library(
    name = "metrics-engine_lib",
    srcs = ["main.go"],
    importpath = "github.com/distributed-task-observatory/metrics-engine",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "metrics-engine",
    embed = [":metrics-engine_lib"],
    visibility = ["//visibility:public"],
)
