load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

py_binary(
    name = "processor_bin",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        "@pip//pika",
        "@pip//psycopg2_binary",
        "@pip//jsonschema",
    ],

    data = [
        "//contracts/schemas",
    ],
)

pkg_tar(
    name = "app_tar",
    srcs = ["main.py"],
    package_dir = "/app",
)

oci_image(
    name = "image",
    base = "@distroless_python_linux_amd64",
    entrypoint = ["python3", "/app/main.py"],
    tars = [":app_tar"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["processor:latest"],
    tags = ["manual"],  # Excluded from //... builds - Docker format requires additional configuration
)

# Test target - runs pytest
py_test(
    name = "processor_test",
    srcs = ["tests/test_main.py"],
    main = "tests/test_main.py",
    data = [
        "VERSION",
        "//contracts/schemas",
    ],
    deps = [
        "@pip//pytest",
    ],
)
