[package]
name = "web-pty-server"
version = "0.1.0"
edition = "2021"
description = "WebSocket PTY broker for odd-dashboard terminal mirroring"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# PTY management
portable-pty = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
base64 = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lock-free data structures (Phase 7: ring buffer)
crossbeam-queue = "0.3"

# HTTP for metrics/health
hyper = { version = "1.1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "web-pty-server"
path = "src/main.rs"
